syntax = "proto3";
package strategy;
option go_package = "strategypb";

service StrategyService {
    rpc CreateStrategy(CreateStrategyReq) returns (CreateStrategyRes);
    //rpc ReadStrategy(ReadStrategyReq) returns (ReadStrategyRes);
    //rpc UpdateStrategy(UpdateStrategyReq) returns (UpdateStrategyRes);
    //rpc DeleteStrategy(DeleteStrategyReq) returns (DeleteStrategyRes);
   // rpc ListStrategies(ListStrategyReq) returns (stream ListStrategyRes);
}

message Strategy {
    string id = 1;
    string strategy_name = 2;
    string selected_exchange = 3;
    enum Type {
        UNKNOWN_TYPE = 0;
        LONG = 1;
    }
    Type strategy_type = 4;
    enum StartOrderType{
        UNKNOWN_START_ORDER = 0;
        LIMIT = 1;
        MARKET = 2;
    }
    StartOrderType start_order_type = 5;
    enum DealStartCondition {
        UNKNOWN_DEAL_START = 0;
        OPEN_NEW_TRADE_ASAP = 1;
    }
    DealStartCondition deal_start_condition = 6;
    double base_order_size = 7;
    double safety_order_size = 8;
    string max_safety_trade_acc = 9;
    string price_devation = 10;
    string safety_order_volume_scale = 11;
    string safety_order_step_scale = 12;
    string take_profit = 13;
    string target_profit = 14;
    string allocate_funds_to_strategy = 15;
    string user_id = 16;
    int64 version = 17;   
    enum Status {
        UNKNOWN_STATUS = 0;
        STOPPED = 1;
        STARTED = 2;
    } 
    Status status = 18;
    repeated Stock stock = 19;
}

message Stock {
    string stock_name = 1;
}

message CreateStrategyReq {
    Strategy strategy = 1;
}

message CreateStrategyRes {
    Strategy strategy = 1;
}

message UpdateStrategyReq {
    Strategy Strategy = 1;
}

message UpdateStrategyRes {
    Strategy Strategy = 1;
}

message ReadStrategyReq {
    string id = 1;
}

message ReadStrategyRes {
    Strategy Strategy = 1;
}

message DeleteStrategyReq {
    string id = 1;
}

message DeleteStrategyRes {
    bool success = 1;
}

message ListStrategyReq{
    string user_id = 1;
}

message ListStrategyRes{
    Strategy Strategy = 1;
}